Use LayoutUnit's when computing scrollbar existence.

Before this patch, non-pixel-aligned layout could cause spurious
auto scrollbars.

BUG=758920

Change-Id: Ifeba759baa2a2503b12673e53aba0dfe55cb5510